# data-pipeline-phapdien

./: .pre-commit-config.yaml  README.md  env.py  main.py  pyproject.toml  step_download_zip.py  step_extract_json.py  step_load_json.py  step_rag_chunking.py  step_rag_embedding.py  temp.py
.github/workflows/: data_pipeline.yml
rag/: vectorstore.py
utils/: config_by_path.py  google_drive.py
