[project]
name = "data-pipeline-phapdien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dlt[postgres]>=1.24.0",
    "environs>=15.0.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "langchain-core>=1.2.28",
    "langchain-huggingface>=1.2.1",
    "langchain-postgres>=0.0.17",
    "loguru>=0.7.3",
    "lxml>=6.0.3",
    "pandas>=3.0.2",
    "plotext>=5.3.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
