[project]
name = "data-pipeline-phapdien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dlt[postgres]>=1.28.0",
    "environs>=15.0.1",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "langchain-core>=1.4.5",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "plotext>=5.3.2",
    "psycopg2-binary>=2.9.12",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
